--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,52 +1,25 @@
-# Server Configuration
-server.port=9001
-# ===============================
-# SERVER
-# ===============================
-
-
-# ===============================
-# APPLICATION NAME
-# ===============================
+# Application name (do not change)
 spring.application.name=demo
 
-# ===============================
-# DATASOURCE (H2 - in memory for tests)
-# ===============================
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+# Do not change the port
+server.port=9001
+
+# Required for HTTPS / reverse proxy (college environment)
+server.forward-headers-strategy=framework
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/calender_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# JPA / HIBERNATE
-# ===============================
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# JPA / Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# ===============================
-# H2 CONSOLE
-# ===============================
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# ===============================
-# SWAGGER / OPENAPI
-# ===============================
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.operationsSorter=method
-
-# ===============================
-# SECURITY (JWT)
-# ===============================
-jwt.secret=MyVerySecretKeyForJwtDemoProject
-jwt.expiration=3600000
-
-# ===============================
-# LOGGING
-# ===============================
-logging.level.org.springframework=INFO
-logging.level.com.example.demo=DEBUG
+# FORCE JSON FOR ALL RESPONSES (CRITICAL FOR TEST CASES)
+spring.mvc.contentnegotiation.default-content-type=application/json
+spring.mvc.contentnegotiation.favor-parameter=false
+spring.mvc.contentnegotiation.favor-path-extension=false
+spring.mvc.contentnegotiation.media-types.json=application/json
