--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.mvc.contentnegotiation.default-content-type=application/json
 spring.mvc.contentnegotiation.favor-parameter=false
 spring.mvc.contentnegotiation.favor-path-extension=false
 spring.mvc.contentnegotiation.media-types.json=application/json
+spring.security.user.name = root
+spring.security.user.password = 1234
