--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
 
     <dependencies>
 
+	<!-- MySQL JDBC Driver -->
+     <dependency>
+       <groupId>com.mysql</groupId>
+       <artifactId>mysql-connector-j</artifactId>
+       <scope>runtime</scope>
+     </dependency>
+
+
 	<!-- Swagger / OpenAPI for Spring Boot 3 -->
 <dependency>
     <groupId>org.springdoc</groupId>
