--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=9001
 server.forward-headers-strategy=framework
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/calender_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/complaint_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -23,5 +23,3 @@ spring.mvc.contentnegotiation.default-content-type=application/json
 spring.mvc.contentnegotiation.favor-parameter=false
 spring.mvc.contentnegotiation.favor-path-extension=false
 spring.mvc.contentnegotiation.media-types.json=application/json
-spring.security.user.name = root
-spring.security.user.password = 1234
