--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,10 @@
         <java.version>17</java.version>
     </properties>
 
-    <!-- ===================== DEPENDENCIES ===================== -->
+    <!-- ================= DEPENDENCIES ================= -->
     <dependencies>
 
-        <!-- Spring Boot Web -->
+        <!-- Spring Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -40,7 +40,7 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- Spring Security (REQUIRED) -->
+        <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -79,14 +79,16 @@
             <version>2.5.0</version>
         </dependency>
 
-        <!-- Spring Boot Test -->
+        <!-- ================= TESTING ================= -->
+
+        <!-- Spring Boot Test (JUnit excluded automatically by TestNG runner) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- TestNG -->
+        <!-- TestNG (MANDATORY) -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -104,7 +106,7 @@
 
     </dependencies>
 
-    <!-- ===================== BUILD ===================== -->
+    <!-- ================= BUILD ================= -->
     <build>
         <plugins>
 
@@ -114,16 +116,16 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- Maven Surefire Plugin (REQUIRED for TestNG) -->
+            <!-- 🔴 FORCE TESTNG (CRITICAL FOR PORTAL) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                    <testNGArtifactName>org.testng:testng</testNGArtifactName>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
 
