--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- Spring Security -->
+        <!-- Spring Security (REQUIRED for your code) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -81,14 +81,14 @@
 
         <!-- ================= TESTING ================= -->
 
-        <!-- Spring Boot Test (JUnit excluded automatically by TestNG runner) -->
+        <!-- Spring Boot Test (JUnit + TestNG compatible) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- TestNG (MANDATORY) -->
+        <!-- TestNG (portal will decide how to run it) -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -109,26 +109,11 @@
     <!-- ================= BUILD ================= -->
     <build>
         <plugins>
-
-            <!-- Spring Boot Plugin -->
+            <!-- Spring Boot -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
-            <!-- 🔴 FORCE TESTNG (CRITICAL FOR PORTAL) -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-                <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                    <useModulePath>false</useModulePath>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
 
