--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=demo
+
+# Don't change the port
+server.port=9001
+
+# For HTTPS / reverse proxy
+server.forward-headers-strategy=framework
+
+spring.datasource.url=jdbc:mysql://localhost:3306/complaint_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
