--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,22 @@
-spring.application.name=demo
-
-# Don't change the port
+# ===============================
+# SERVER
+# ===============================
 server.port=9001
 
-# For HTTPS / reverse proxy
-server.forward-headers-strategy=framework
-
-spring.datasource.url=jdbc:mysql://localhost:3306/complaint_db?createDatabaseIfNotExist=true
+# ===============================
+# H2 DATABASE (IN-MEMORY)
+# ===============================
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=Amypo
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
-
-
-
+# ===============================
+# H2 CONSOLE
+# ===============================
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
